--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon -r dotenv/config --experimental-json-modules src/server.js"
-  },
+  "dev": "nodemon -r dotenv/config --experimental-json-modules src/server.js",
+  "start": "node -r dotenv/config src/server.js"
+},
   "keywords": [],
   "author": "",
   "license": "ISC",
